fixed stuck div

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.stuck {
   position: absolute;
   background-color: salmon;
   border: 5px dashed;
-  center: 50%;
+  center: 50px;
   top: 0px;
   height: 25px;
 }
@@ -29,7 +29,7 @@ div.stuck {
   overflow: hidden;
   position: fixed;
   left: 0;
-  top: 25px
+  top: 25
   
 }
 
